color fixes dark mode

--- a/block-system-2.0/ova/character/ova.css
+++ b/block-system-2.0/ova/character/ova.css
@@ -1,8 +1,8 @@
 {
   border: 0;
   position: relative;
-  color: #222222!important;
-  /* -webkit-text-fill-color: #222222; */
+  color: #444444!important;
+  /* -webkit-text-fill-color: #444444; */
   font-family: Teko Regular;
   font-weight: 400;
   font-size: 20px;
@@ -58,7 +58,7 @@ div.ova-character-sheet {
   text-transform: uppercase}
 .contentContainer .inputContent {
   font-size: 20px;
-  color: #000000}
+  color: #444444}
 .card {
   padding:0px;
   border: 3px solid #6A2323;
@@ -77,6 +77,7 @@ div.ova-character-sheet {
 .card-body {
   padding:0px;
   background-color:#FFFFFF;
+  color:#444444;
   border-radius: 0px 0px 12px 12px;}
 .headerContainer {
   color: #FFFFFF;
@@ -105,7 +106,7 @@ div.ova-character-sheet {
 .ev { /* background-color:#FFFFFF */}
 .odd { /*background-color: #FAFAFA!important; */}
 input[required] { border: 2px solid red!important;}
-.att { font-size: 24px; padding: 0px 10px; font-style:italic}
+.att { font-size: 24px; padding: 0px 10px; font-style:italic }
 .stat { font-size: 24px; padding: 0px 10px}
 .bdr { border-bottom: 1px solid #6A2323}
 .cond { font-size: 24px; padding: 2px}
@@ -136,7 +137,7 @@ h1 { font-size:72px; text-align:center; font-weight:800}
    padding: 6px 10px 1px 10px!important}
 .attributeContainer .rolldice {
    background: #e0d9d4!important;
-   -webkit-text-fill-color: black!important}
+   -webkit-text-fill-color: #444444!important}
 .marked {
    font-weight:400;
    color:red!important;
@@ -145,14 +146,15 @@ input::-webkit-outer-spin-button,  input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0}
 .roll { width:10%; font-size:64px; line-height: 1.0;}
-h1,  .small,  .small a,  .artist-credits,  .artist-credits a { color: #000000; -webkit-text-fill-color: #000000;}
 .form-control,  .form-control:focus { font-size: 24px!important; padding:2px 2px 2px 4px; display: inline-flex; width: 80%}
 input.form-control { margin: 1px 1px 1px 1px}
 textarea.form-control { margin: 10px 1px 0px 0px}
 .sm { width:100px!important}
 .smf,  .smf:focus { font-size: 24px!important}
 textarea.form-control { min-height: 3em!important;}
-b { text-transform: capitalize; font-size:22px; color: #6A2323}
+b { text-transform: capitalize; font-size:22px; color: #6A2323!important}
 .p100,  .p100:focus { width:100%}
+.nopd { padding:0px}
+small,  small a,  .artist-credits,  .artist-credits a { color: #6A2323!important }
 ::-webkit-input-placeholder { opacity: .5}
-select.form-control:not([size]):not([multiple]) { height: 2.45rem!important; width:150px; margin: 1px 1px 1px 1px;
+select.form-control:not([size]):not([multiple]) { height: 2.45rem!important; width:150px; margin: 1px 1px 1px 1px }
